--- a/Application/Admin/View/Home/index.html
+++ b/Application/Admin/View/Home/index.html
@@ -52,13 +52,13 @@
 	<!-- 产品介绍 start -->
 	<div class="introduction w">
 		<div class="introductionbox mainWidth">
-			<h2 class="mainTitle">Live----网站权威管理系统</h2>
+			<h2 class="mainTitle">TP3-CMS 网站权威管理系统</h2>
 			<h4 class="subTitle">稳固积累、持续创新、静思敏行，打造最简洁高效管理系统。</h4>
 			<ul>
 				<li class="fl">
 					<i class="i1"></i>
 					<p>
-						<b>完善的cms系统</b>
+						<b>完善的CMS系统</b>
 						<span>测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容</span>
 					</p>
 				</li>
@@ -106,7 +106,7 @@
 	<div class="client w pb50">
 		<div class="clientbox mainWidth">
 			<h2 class="mainTitle pt50">客户案例</h2>
-			<h4 class="subTitle">Live累计500多客户建立至今，累计超过2000多个项目，客户遍及北京、上海、广州、深圳、杭州、厦门、台湾等地，涵盖CCTV7、电信等500强巨头企业</h4>
+			<h4 class="subTitle">TP3-CMS 累计500多客户建立至今，累计超过2000多个项目，客户遍及北京、上海、广州、深圳、杭州、厦门、台湾等地，涵盖CCTV7、电信等500强巨头企业</h4>
 			<div class="case-list mt50">
 				<foreach name="case" item="v">
 					<div class="col3">
@@ -127,7 +127,7 @@
 	<div class="news w pb50">
 		<div class="newsbox mainWidth">
 			<h2 class="mainTitle pt50">最新动态</h2>
-			<h4 class="subTitle">Live累计500多客户建立至今，累计超过2000多个项目，客户遍及北京、上海、广州、深圳、杭州、厦门、台湾等地，涵盖CCTV7、电信等500强巨头企业</h4>
+			<h4 class="subTitle">TP3-CMS累计500多客户建立至今，累计超过2000多个项目，客户遍及北京、上海、广州、深圳、杭州、厦门、台湾等地，涵盖CCTV7、电信等500强巨头企业</h4>
 			<ul>
 				<foreach name="article" item="v">
 					<li><a href="news/art-{$v['art_id']}.html">{$v['art_title']}</a> <span class="date"><?php echo date('Y-m-d', $v['art_time']); ?></span></li>
