--- a/Application/Admin/View/Home/msg.html
+++ b/Application/Admin/View/Home/msg.html
@@ -29,13 +29,13 @@
 						<h2>在线留言</h2>
 						<form class="clientinfo" onsubmit="return present();" method="post" id="dataSet">
 							<p>姓名</p>
-							<input type="text" name="msg_name">
+							<input type="text" name="msg_name" required>
 							<p>手机</p>
-							<input type="text" name="msg_phone">
+							<input type="text" name="msg_phone" required>
 							<p>QQ</p>
-							<input type="text" name="msg_qq">
+							<input type="text" name="msg_qq" required>
 							<p>需求</p>
-							<textarea name="msg_content"></textarea>
+							<textarea name="msg_content" required></textarea>
 							<button type="submit">提交</button>
 						</form>
 						
