--- a/Application/Admin/View/HomeCommon/common.html
+++ b/Application/Admin/View/HomeCommon/common.html
@@ -53,7 +53,7 @@
 		<div class="footerbox mainWidth">
 			<div class="columns fl ml15">
 				<h3>
-					关于Live
+					关于TP3-CMS
 				</h3>
 				<ul>
 					<li><a href="us.html">公司简介</a></li>
