--- a/Application/Home/View/Index/news.html
+++ b/Application/Home/View/Index/news.html
@@ -18,7 +18,7 @@
 		<div class="newsbox">
 			<foreach name="list" item="v">
 				<div class="newsitem">
-					<h2 class="fl"><a href="news/art-{$v['art_id']}.html" class="newstitle">{$v['art_title']}</a></h2>
+					<h2 class="fl"><a href="__ROOT__/news/art-{$v['art_id']}.html" class="newstitle">{$v['art_title']}</a></h2>
 					<p class="time fr">
 						<span class="author">{$v['art_editor']}</span>
 						<span>|</span>
