--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -5,7 +5,7 @@
 	<!--头部 开始-->
 	<div class="top_box" style="color:#080808;">
 		<div class="top_left">
-			<div class="logo" style="color:#fff;" onclick="test();">Live后台管理</div>
+			<div class="logo" style="color:#fff;" onclick="test();">TP3-CMS 后台管理</div>
 			<a href="__PUBLIC__/../index.html" class="myruntime myindex" title="网站首页" target="_blank"><i class="fa fa-home"></i></a>
 			<a href="__MODULE__/Runtime/index" class="myruntime" title="更新缓存" target="main"><i class="fa fa-trash-o"></i></a>
 		</div>
@@ -47,7 +47,7 @@
 
 	<!--底部 开始-->
 	<div class="bottom_box">
-		CopyRight © 2018. Powered By <a href="http://www.baidu.com">www.baidu.com</a>.
+		CopyRight © 2019. Powered By <a href="https://github.com/duiying/TP3-CMS">GitHub</a>.
 	</div>
 	<!--底部 结束-->
 </body>
