--- a/Application/Admin/View/Login/index.html
+++ b/Application/Admin/View/Login/index.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background:#393D49;">
 	<div class="login_box">
-		<h1>Live</h1>
+		<h1 style="font-size:30px;margin-top:150px;">TP3-CMS</h1>
 		<h2 style="color:#fff;">管理平台</h2>
 		<div class="form">
 			<form action="#" method="post" action="" id="dataSet" onsubmit="return present();">
@@ -33,7 +33,7 @@
 					</li>
 				</ul>
 			</form>
-			<p><a href="http://www.live.com" style="color:#fff;">首页</a><span style="color:#fff;"> &copy; 2018 Powered by </span><a href="http://www.live.com" target="_blank" style="color:#fff;">www.baidu.com</a></p>
+			<p><a href="http://www.live.com" style="color:#fff;">首页</a><span style="color:#fff;"> &copy; 2018 Powered by </span><a href="https://github.com/duiying/TP3-CMS" target="_blank" style="color:#286090;">GitHub</a></p>
 		</div>
 	</div>
 </body>
